# Shredword

./: .gitignore  CMakeLists.txt  MANIFEST.in  Manifest.in  README.md  pyproject.toml  setup.cfg  test.py
docs/: User.md
shred/: __init__.py  build.py  cbase.py  core.py
src/: core.cpp  core.h  hash.c  hash.cpp  hash.h  hashmap.cpp  hashmap.h  token.cpp  token.h
src/inc/: hash.h  normalize.h  trie.h
tests/: init_test.py  initialization_test.py  runtime_test.py  shred_test.py  special_token_test.py
tests/features/: test_hash.c  test_normalize.c  test_trie.c
vocabs/: base_50k.model  pre_16k.model  pre_25k.model
